fix Final version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,11 @@ spring.application.name=SekainoMangaBase
 server.port=8080 
 server.address=0.0.0.0
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/sekai
-spring.datasource.username=sekai_user
-spring.datasource.password=sekai123
-spring.datasource.driver-class-name=org.postgresql.Driver
-
+spring.datasource.url=jdbc:postgresql://sekaimanga.c180y0mia40e.us-east-1.rds.amazonaws.com:5432/sekainomanga
+spring.datasource.username=postgres
+spring.datasource.password=sekai1234.
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
 app.jwt.secret=VGhpcy1pcy1qd3Qtc2VjcmV0LWZvci1TZWthaS1uby1NYW5nYQ==
